# chance-staking

./: .gitignore  CLAUDE.md  FRONTEND_BUILD_FIX.md  INTERFACE_CHANGES.md  README.md  deployed.md
.github/workflows/: contracts.yml  docker.yml
chance-staking/: .gitignore  Cargo.toml  README.md
chance-staking/contracts/drand-oracle/: Cargo.toml
chance-staking/contracts/drand-oracle/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  verify.rs
chance-staking/contracts/reward-distributor/: Cargo.toml
chance-staking/contracts/reward-distributor/src/: contract.rs  error.rs  execute.rs  msg.rs  query.rs  state.rs
chance-staking/contracts/staking-hub/: Cargo.toml
chance-staking/contracts/staking-hub/src/: contract.rs  error.rs  execute.rs  msg.rs  query.rs  state.rs
chance-staking/docs/: AUDIT.md  AUDIT_V2.md  AUDIT_V2_FIXES.md  INTEGRATION_TEST_COVERAGE.md  INTERFACE_CHANGES.md
chance-staking/scripts/: deploy_testnet.sh  deploy_testnet_fast.sh
chance-staking/tests/: integration.rs
chance-staking/tests/integration/: Cargo.toml
chance-staking/tests/integration/src/: tests.rs
frontend/: .npmrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  theme.ts
frontend/src/components/: ActivityTicker.tsx  Confetti.tsx  DrawDetail.tsx  DrawsSection.tsx  EpochCountdown.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  HowItWorks.tsx  PortfolioSection.tsx  RewardsCalculator.tsx  RpcModal.tsx  RpcSelector.tsx  StakingPanel.tsx  Toast.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/pages/: AuditPage.tsx  ContractsPage.tsx  DocsPage.tsx  DrawsPage.tsx  HowItWorksPage.tsx  PrivacyPage.tsx  StakingPage.tsx  TermsPage.tsx  ValidatorsPage.tsx
frontend/src/services/: contracts.ts
frontend/src/store/: rpcStore.ts  useStore.ts
frontend/src/utils/: formatNumber.tsx
operator-node/: .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json
operator-node/src/: clients.ts  config.ts  index.ts
operator-node/src/services/: drand.ts  draw.ts  epoch.ts  merkle.ts  snapshot.ts
operator-node/src/utils/: crypto.ts  logger.ts
