[workspace]
members = [
    "contracts/staking-hub",
    "contracts/reward-distributor",
    "contracts/drand-oracle",
    "packages/chance-staking-common",
]
resolver = "2"

[workspace.dependencies]
# ── CosmWasm core ──
cosmwasm-std = { version = "2.2.2", features = [
    "abort",
    "cosmwasm_1_2",
    "cosmwasm_1_3",
    "cosmwasm_1_4",
    "cosmwasm_2_0",
    "iterator",
    "stargate",
] }
cosmwasm-schema = { version = "2.2.2" }
cw2 = { version = "2.0.0" }
cw-storage-plus = { version = "2.0.0" }

# ── Injective ──
injective-cosmwasm = { version = "0.3.4-1" }
injective-math = { version = "0.3.4-1" }

# ── Serialization ──
schemars = { version = "0.8.22" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde-json-wasm = { version = "1.0.0" }
serde_json = { version = "1.0.140" }

# ── Errors ──
thiserror = { version = "2.0.12" }

# ── Crypto / hashing ──
sha2 = { version = "0.10" }
hex = { version = "0.4.3" }
drand-verify = { version = "0.6.2" }

# ── Internal packages ──
chance-staking-common = { path = "packages/chance-staking-common" }

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = true

[dev-dependencies]
injective-test-tube = { version = "1.16.3-1" }
serde_json = { version = "1.0.140" }
cosmwasm-std = { version = "2.2.2" }
chance-staking-common = { path = "packages/chance-staking-common" }
sha2 = { version = "0.10" }
hex = { version = "0.4.3" }
